Mon Aug 21 19:15:59 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Decent, Working XML check courtesy of Dave J (the powertweak
	guy), much better :-)
	* A line object type. Works well, but don't try and resize it,
	that code is just a stubb right now. I had to use a line clipping
	algorithm to do partial rendering right here, so everyone thank
	Cohen and Sutherland for "lending" me theirs ;-)
	* I can put the line clipping code into imlib2 if raster is
	interested, as a seperate function of course.

Sun Aug 20 01:10:36 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* nolan pointed out that the _object_dirty() function dirties the
	whole rendered image size, even if the object has been resized
	smaller than the rendered size. This also effects
	click-selection. Fixed now with a obj->get_rendered_area() member
	fuction. Thanks nolan :)

Fri Aug 18 00:37:25 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Check for libxml. Test whether it is installed to
	<gnome-xml/parser.h> or <libxml/parser.h> (it's the same damn lib,
	the author just got very confused about his loyalties and changed
	between one minor version and the next :/ And NO, it does not
	depend on GNOME. You need libxml1 for geist right now. libxml2
	needs a coupla bugs fixed before I switch....

Thu Aug 17 00:12:36 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Wheeeee! Geist can load it's own file format now :-)
	* Just make some changes, do a file/save and then load it
	back. Yipee!

Wed Aug 16 20:30:52 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Update object list when changing current document.
	* Freeze clist for multiple additions...

Wed Aug 16 20:13:26 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Support multiple documents. Added "Save" menu item...

Tue Aug 15 18:38:17 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Start of some menus and a working "Save as..." entry. This is
	not how the menus will end up, but serves as a working test...
