@@ -104,8 +104,11 @@ struct __geist_object
    unsigned char (*part_is_transparent) (geist_object * obj, int x, int y);
    void (*resize_event) (geist_object * obj, int x, int y);
    GtkWidget *(*display_props) (geist_object * obj);
-   void (*get_rendered_area) (geist_object * obj, int *x, int *y,
-                                           int *w, int *h);
+   void (*get_rendered_area) (geist_object * obj, int *x, int *y, int *w,
+                              int *h);
+   int (*check_resize_click) (geist_object * obj, int x, int y);
+   void (*get_resize_box_coords) (geist_object * obj, int resize, int *x,
+                                 int *y);
 };
 
 /* allocation functions */
@@ -171,15 +174,17 @@ GtkWidget *geist_object_generic_properties(geist_list * list);
 
 void geist_object_debug_print_values(geist_object * obj);
 void geist_object_get_rendered_area(geist_object * obj, int *x, int *y,
-
                                     int *w, int *h);
 void geist_object_int_get_rendered_area(geist_object * obj, int *x, int *y,
-
                                         int *w, int *h);
-void
-geist_object_get_clipped_render_areas(geist_object * obj, int x, int y, int w, int h,
-                               int *sx, int *sy, int *sw, int *sh, int *dx,
-                               int *dy, int *dw, int *dh);
+void geist_object_get_clipped_render_areas(geist_object * obj, int x, int y,
+                                           int w, int h, int *sx, int *sy,
+                                           int *sw, int *sh, int *dx, int *dy,
+                                           int *dw, int *dh);
+int geist_object_int_check_resize_click(geist_object * obj, int x, int y);
+void geist_object_int_get_resize_box_coords(geist_object * obj, int resize,
+
+                                            int *x, int *y);
 
 #define geist_object_set_state(o, s) (o->state |=  s)
 #define geist_object_unset_state(o, s) (o->state &= ~(s))
